fix: prevent logo distortion

--- a/docs/src/landing/css/reactive-kitten.webflow.css
+++ b/docs/src/landing/css/reactive-kitten.webflow.css
@@ -1809,6 +1809,7 @@
 .brand {
   height: 100%;
   padding-right: 16px;
+  flex-shrink: 0;
 }
 
 .link {
